@@ -119,11 +119,11 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.8.1-alpha04
-@set doc-edition 4.8.1-alpha04
+@set nco-edition 4.8.1-alpha05
+@set doc-edition 4.8.1-alpha05
 @set copyright-years 1995--2019
 @set update-year 2019
-@set update-date 2 June 2019
+@set update-date 7 June 2019
 @set update-month June 2019
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
